# ai-healer-framework

./: .gitignore  README.md  conftest.py  logging_config.py  main.py  pyproject.toml  test_context.py
adapter/selfheal/: collector.py  healer_interface.py  locator_proxy.py  locator_transformer.py  models.py  orchestrator.py  page_proxy.py  reporter.py  retry.py  roles.py  score_engine.py  self_healer.py  snapshot_helper.py  validator.py
analyzer/: confidence.py  llm_analyzer.py
rule_engine/: execution_engine.py  match.py  models.py  rule_loader.py
tests/playwright/: test_login.py
